<resources>
    <string name="app_name">ORMLiteSample</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">User Name</string>
    <string name="hint_email">Email</string>
    <string name="action_add_user">Add User</string>
    <string name="err_msg_name">Please enter name</string>
    <string name="err_msg_email">Please enter valid email</string>
    <string name="menu_search">Search User</string>
    <string name="action_get_5_data">Get 5 Data</string>
    <string name="action_order_by_name">Order By Name</string>
    <string name="action_order_by_created_time">Order By Time</string>
    <string name="action_edit_user">Edit User</string>

    <string-array name="array_name">
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
</resources>
